--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
     "resolve": "1.10.0",
-    "sass-loader": "7.1.0",
+    "sass-loader": "^7.1.0",
     "semver": "6.0.0",
     "style-loader": "0.23.1",
     "styled-components": "^4.2.0",
@@ -152,6 +152,7 @@
     "@types/react-router-dom": "^4.3.3",
     "@types/styled-components": "^4.1.15",
     "cssnano": "^4.1.10",
+    "node-sass": "^4.12.0",
     "typescript": "^3.4.5"
   },
   "proxy": "http://10.10.100.172:8080"
