--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "styled-components": "^4.2.0",
     "terser-webpack-plugin": "1.2.3",
     "ts-pnp": "1.1.2",
+    "typescript": "3.2",
     "url-loader": "1.1.2",
     "webpack": "4.29.6",
     "webpack-dev-server": "3.2.1",
@@ -81,7 +82,6 @@
   "browserslist": {
     "production": [
       ">0.2%",
-      "not dead",
       "not op_mini all"
     ],
     "development": [
@@ -152,8 +152,7 @@
     "@types/react-router-dom": "^4.3.3",
     "@types/styled-components": "^4.1.15",
     "cssnano": "^4.1.10",
-    "node-sass": "^4.12.0",
-    "typescript": "^3.4.5"
+    "node-sass": "^4.12.0"
   },
-  "proxy": "http://10.10.100.172:8080"
+  "proxy": "http://10.10.22.221:8080"
 }
